overflow fixed

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,9 @@
     box-sizing: border-box;
     font-family: 'Raleway', sans-serif;
 }
-
+html{
+    overflow-x: hidden;
+}
 body{
     overflow-x: hidden;
     width: 100%;
